--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -54,7 +54,7 @@ font-feature-settings:'liga';
 .base-layer {position:relative;z-index:20}
 .base-wrap {position:relative;width:100%;height:100%;z-index:0;-webkit-overflow-scrolling:touch}
 .base-main {width:100%}
-.base-body-a {width:100%;background:url('../../resources/images/common/top_bg.png') no-repeat 50% 50%}
+.base-body-a {width:100%;background:url('../../resources/images/common/top_bg.png') no-repeat 50% 0}
 
 /* blt */
 .blt-arrow-a {display:inline-block;width:46px;height:46px;background:url("../../resources/images/blt/blt-arrow-a.png") no-repeat 0 0;background-size:100%}
