--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -35,6 +35,7 @@ article, aside, details, figcaption, figure, footer, header, main, hgroup, nav, 
 caption {position:relative !important;width:0 !important;height:0 !important;z-index:-1 !important;color:transparent !important;overflow:hidden !important;font-size:xx-small !important;line-height:0 !important;min-height:0 !important;max-height:0 !important}
 legend,
 .hidden,
+.blind,
 .hide {position:absolute !important;width:0 !important;height:0 !important;z-index:-1 !important;color:transparent !important;overflow:hidden !important;font-size:xx-small !important;line-height:0 !important;min-height:0 !important;max-height:0 !important}
 
 /* Google Material icons */
@@ -50,8 +51,24 @@ font-feature-settings:'liga';
 }
 
 /* base layout */
-.base-skip {position:fixed;z-index:100}
-.base-layer {position:relative;z-index:20}
-.base-wrap {position:relative;width:100%;height:100%;z-index:0;-webkit-overflow-scrolling:touch}
-.base-main {width:100%}
-.base-body-a {width:100%;background:url('../../resources/images/common/top_bg.png') no-repeat 50% 50%}
+body {background:url('../../resources/images/common/top_bg.png') no-repeat 50% 0;}
+.base-skip {position:fixed;z-index:100;}
+.base-layer {position:relative;z-index:20;}
+.base-wrap {position:relative;width:100%;height:100%;z-index:0;-webkit-overflow-scrolling:touch;}
+.base-main {width:100%;}
+.base-body-a {width:100%;}
+
+/* base header */
+.base-header {width:100%;max-width:1640px;margin:0 auto;padding:55px 20px 20px;}
+.base-header::after{content:""; display:block; clear:both;}
+.logo-tera {display:block;float:left;}
+.util-menu {float:right;}
+.util-menu > a {display:inline-block;width:55px;height:55px;border:2px solid #fff;border-radius:50%;background:url(../../resources/images/common/ico-header.png) no-repeat -2px -2px ;}
+.util-menu .util-n2 {background-position:-57px -2px;}
+.util-menu > a + a {margin-left:10px;}
+
+
+
+
+
+
