--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -1,7 +1,11 @@
 @charset "utf-8";
 
 /* 메인 */
-.teacher-group {height:1580px}
+.teacher-group {height:1580px; }
+.teacher-group h2 {display:block;margin:0 auto;max-width:1640px;margin:0 auto;padding:55px 20px 20px;text-align:center;color:#dfdfdf;font-size:60px;font-weight:100;}
+.teacher-group h2 strong {color:#2b2e34;font-weight:100;background-color:#ffcd6c;}
+.teacher-group .logo-text {color:#f8d057;}
+.teacher-group .logo-text b {font-weight:500;}
 
 .article-box {max-width:1500px;margin:0 auto}
 .article-box .section-a {margin:0 24px;border-radius:30px;background-color:#2e3036;box-shadow:0 -5px 10px rgba(0,0,0,.3);padding:55px 0 78px}
