--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -34,6 +34,7 @@ article, aside, details, figcaption, figure, footer, header, main, hgroup, nav, 
 /* common */
 caption {position:relative !important;width:0 !important;height:0 !important;z-index:-1 !important;color:transparent !important;overflow:hidden !important;font-size:xx-small !important;line-height:0 !important;min-height:0 !important;max-height:0 !important}
 legend,
+.blind,
 .hidden,
 .hide {position:absolute !important;width:0 !important;height:0 !important;z-index:-1 !important;color:transparent !important;overflow:hidden !important;font-size:xx-small !important;line-height:0 !important;min-height:0 !important;max-height:0 !important}
 
