--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -1,18 +1,23 @@
 @charset "utf-8";
 
 /* 메인 */
-.teacher-group {height:1580px; }
+.teacher-group {height:1580px; position:relative;}
 .teacher-group h2 {display:block;margin:0 auto;max-width:1640px;margin:0 auto;padding:55px 20px 20px;text-align:center;color:#dfdfdf;font-size:60px;font-weight:100;}
 .teacher-group h2 strong {color:#2b2e34;font-weight:100;background-color:#ffcd6c;}
 .teacher-group .logo-text {color:#f8d057;}
 .teacher-group .logo-text b {font-weight:500;}
 
 .teacher-menu{position: relative;width:100%;}
-.teacher-menu .dep-1 > li{}
-.teacher-menu .dep-2 button{}
+.teacher-menu .btn-dep-1{position:absolute; top:0; left:0;}
+
+.teacher-menu .dep-2{width:1000px; margin:0 auto; text-align:center;}
+.teacher-menu .dep-2 button{display:inline-block; border:2px solid #c7941a; background: linear-gradient(-45deg, #a27623,#ae7f2d 40%, #f5c75f, #e6b352); color:#fff; height:80px; border-radius:40px; padding:10px 60px; font-size:30px; font-family: SCD; font-weight: 600; text-shadow:0 1px 4px rgba(137,100,37,1);box-shadow:10px 0 10px rgba(0,0,0,.6); margin-bottom:30px}
+.teacher-menu .dep-2 button:hover,
+.teacher-menu .dep-2 button:focus{background: linear-gradient(-45deg, #633f00,#674100 40%, #a46d00, #925f00); border-color:#80590d;}
+.teacher-menu .dep-2 button + button{margin-left:30px;}
 
 .teacher-swiper{width:100%;max-width:1380px;margin:0 auto;padding:0;}
-.teacher-item {position:relative; width:285px;height:307px;border-radius:30px;border-bottom-left-radius:0;box-shadow:10px 10px 30px rgba(0,0,0,.3);background: linear-gradient(#fff, #ddd7d0); margin:100px 0 50px}
+.teacher-item {position:relative; width:285px;height:307px;border-radius:30px;border-bottom-left-radius:0;box-shadow:10px 10px 30px rgba(0,0,0,.3);background: linear-gradient(#fff, #ddd7d0); margin:100px auto 50px}
 .teacher-item .photo{position:absolute; bottom:110px; left:0;}
 .teacher-item .info{position:relative; padding:100px 25px 0; z-index: 1; font-size:16px; color:#000; line-height:1.3;}
 .teacher-item .info dt{font-weight:600; font-size:30px; color:#000; text-align: right; padding:0 0 20px;}
