--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -26,6 +26,7 @@ input, textarea, select {box-sizing:border-box;font-family:'Noto Sans KR', sans-
 label {cursor:pointer}
 
 /* base line-height */
+a,button{outline:0}
 p {line-height:1.5}
 
 /* html5 */
@@ -54,12 +55,12 @@ font-feature-settings:'liga';
 .for-a11y {position:absolute;width:1px;height:1px;margin:-1px;padding:0;border:0;clip:rect(0 0 0 0);overflow:hidden;text-indent:-99em}
 
 /* base layout */
-body {background:url('../../resources/images/common/top_bg.png') no-repeat 50% 0;}
+body {background:url('../../resources/images/common/bg-top.jpg') no-repeat 50% 0;}
 .base-skip {position:fixed;z-index:100;}
 .base-layer {position:relative;z-index:20;}
 .base-wrap {position:relative;width:100%;height:100%;z-index:0;-webkit-overflow-scrolling:touch;}
 .base-main {width:100%;}
-.base-body-a {width:100%;background:url('../../resources/images/common/top_bg.png') no-repeat 50% 0}
+.base-body-a {width:100%;}
 .base-footer {width:100%;background:url('../../resources/images/common/footer_bg.png') no-repeat 50% 0;height:460px}
 
 /* base header */
