--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -8,23 +8,42 @@
 .teacher-group .logo-text b {font-weight:500;}
 
 .teacher-menu{position: relative;width:100%;}
-.teacher-menu .btn-dep-1{position:absolute; top:0; left:0;}
+.teacher-menu .dep-1{position:relative;}
+.teacher-menu .dep-1 li::before{content:""; display:block; position:absolute; left:0; width:calc((100% - 1510px) / 2); border-top:2px solid #fff; opacity:0.3;}
+.teacher-menu .btn-dep-1{position:absolute; left:50%; font-size:24px; font-family: SCD; font-weight: 600; color:#fff; opacity: .3; overflow:hidden; height:85px; margin-left:-750px; transition:all .2s ease-out}
+.teacher-menu .on .btn-dep-1{font-size:48px; opacity:1; padding-left:75px;}
+.teacher-menu .on .btn-dep-1::after{left:0;}
 
-.teacher-menu .dep-2{width:1000px; margin:0 auto; text-align:center;}
+.teacher-menu .dep-1 li.on::before{border-top:2px solid #f3b805; opacity:1;}
+
+.teacher-menu .btn-dep-1::after{content:""; display:block; width:68px; height:53px; background:url(../../resources/images/common/key.png) no-repeat 0 0 / cover; position:absolute; top:15px; left:-68px; transition:all .2s ease-out}
+
+.teacher-menu .n1 .btn-dep-1{top:0;}
+.teacher-menu .n2 .btn-dep-1{top:85px;}
+.teacher-menu .n3 .btn-dep-1{top:170px;}
+
+.teacher-menu .dep-1 .n1::before{top:42px;}
+.teacher-menu .dep-1 .n2::before{top:127px;}
+.teacher-menu .dep-1 .n3::before{top:212px;}
+
+.teacher-menu .dep-2{width:1000px; margin:0 auto; text-align:center; padding:30px 0 0;}
 .teacher-menu .dep-2 button{display:inline-block; border:2px solid #c7941a; background: linear-gradient(-45deg, #a27623,#ae7f2d 40%, #f5c75f, #e6b352); color:#fff; height:80px; border-radius:40px; padding:10px 60px; font-size:30px; font-family: SCD; font-weight: 600; text-shadow:0 1px 4px rgba(137,100,37,1);box-shadow:10px 0 10px rgba(0,0,0,.6); margin-bottom:30px}
 .teacher-menu .dep-2 button:hover,
 .teacher-menu .dep-2 button:focus{background: linear-gradient(-45deg, #633f00,#674100 40%, #a46d00, #925f00); border-color:#80590d;}
+.teacher-menu .dep-2 button.selected{background: linear-gradient(-45deg, #242424,#2c2c2c 40%, #3f3f3f, #393939); border-color:#3e3e3e;}
 .teacher-menu .dep-2 button + button{margin-left:30px;}
 
-.teacher-swiper{width:100%;max-width:1380px;margin:0 auto;padding:0;}
+.teacher-swiper{width:100%;max-width:1380px;margin:0 auto;}
 .teacher-item {position:relative; width:285px;height:307px;border-radius:30px;border-bottom-left-radius:0;box-shadow:10px 10px 30px rgba(0,0,0,.3);background: linear-gradient(#fff, #ddd7d0); margin:100px auto 50px}
 .teacher-item .photo{position:absolute; bottom:110px; left:0;}
 .teacher-item .info{position:relative; padding:100px 25px 0; z-index: 1; font-size:16px; color:#000; line-height:1.3;}
 .teacher-item .info dt{font-weight:600; font-size:30px; color:#000; text-align: right; padding:0 0 20px;}
 .teacher-item .btn{display:inline-block; background-color:#292a2e; color:#fff; height:43px; border-radius:22px; padding:10px 28px; font-size:16px;}
 .teacher-item .btn-area{width:100%; position:absolute; bottom:0; left:0; padding:15px 0 30px; text-align:center; }
-
-
+.teacher-swiper .swiper-button-prev{width:68px; height:68px; background: url(../../resources/images/common/arrow-swiper.png) no-repeat 0 0; left:0;}
+.teacher-swiper .swiper-button-next{width:68px; height:68px; background: url(../../resources/images/common/arrow-swiper.png) no-repeat 0 0; transform: rotate(180deg); right:0;}
+.teacher-swiper .swiper-button-next::after{display: none;}
+.teacher-swiper .swiper-button-prev::after{display: none;}
 .article-box {max-width:1500px;margin:0 auto}
 .article-box .section-a {margin:0 24px;border-radius:30px;background-color:#2e3036;box-shadow:0 -5px 10px rgba(0,0,0,.3);padding:55px 0 78px;position:relative}
 .article-box .section-a:before {content:'';position:absolute;top:-1px;right:-1px;bottom:-1px;left:-1px;border:1px solid #fff;border-radius:30px}
