--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -55,7 +55,7 @@ font-feature-settings:'liga';
 .for-a11y {position:absolute;width:1px;height:1px;margin:-1px;padding:0;border:0;clip:rect(0 0 0 0);overflow:hidden;text-indent:-99em}
 
 /* base layout */
-body {background:url('../../resources/images/common/bg-top.jpg') no-repeat 50% 0;}
+body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 50% 0;}
 .base-skip {position:fixed;z-index:100;}
 .base-layer {position:relative;z-index:20;}
 .base-wrap {position:relative;width:100%;height:100%;z-index:0;-webkit-overflow-scrolling:touch;}
@@ -91,3 +91,10 @@ body {background:url('../../resources/images/common/bg-top.jpg') no-repeat 50% 0
 
 /* blt */
 .blt-arrow-a {display:inline-block;width:46px;height:46px;background:url("../../resources/images/blt/blt-arrow-a.png") no-repeat 0 0;background-size:100%}
+
+/* button */
+.btn-area{position: relative; width:100%; text-align:center;}
+.btn-gold {display:inline-block; border:2px solid #c7941a; background: linear-gradient(-69deg, #a27623,#ae7f2d 40%, #ffed8c, #f5c75f, #e6b352); color:#fff; font-family: SCD; font-weight: 600; text-shadow:0 1px 4px rgba(137,100,37,1);box-shadow:10px 0 10px rgba(0,0,0,.6); transition:all .2s ease-out;}
+.btn-gold:hover,
+.btn-gold:focus{background: linear-gradient(-44deg, #633f00,#674100 40%, #a46d00, #925f00); border-color:#80590d;box-shadow:0 0 8px rgba(0,0,0,.9); }
+.btn-gold.selected{background: linear-gradient(-46deg, #242424,#2c2c2c 40%, #3f3f3f, #393939); border-color:#3e3e3e;}
