--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -27,12 +27,17 @@
 .teacher-menu .dep-1 .n3::before{top:212px;}
 
 .teacher-menu .dep-2{width:1000px; margin:0 auto; text-align:center; padding:30px 0 0;}
-.teacher-menu .dep-2 button{display:inline-block; border:2px solid #c7941a; background: linear-gradient(-45deg, #a27623,#ae7f2d 40%, #f5c75f, #e6b352); color:#fff; height:80px; border-radius:40px; padding:10px 60px; font-size:30px; font-family: SCD; font-weight: 600; text-shadow:0 1px 4px rgba(137,100,37,1);box-shadow:10px 0 10px rgba(0,0,0,.6); margin-bottom:30px}
-.teacher-menu .dep-2 button:hover,
-.teacher-menu .dep-2 button:focus{background: linear-gradient(-45deg, #633f00,#674100 40%, #a46d00, #925f00); border-color:#80590d;}
-.teacher-menu .dep-2 button.selected{background: linear-gradient(-45deg, #242424,#2c2c2c 40%, #3f3f3f, #393939); border-color:#3e3e3e;}
-.teacher-menu .dep-2 button + button{margin-left:30px;}
+.teacher-menu .dep-2 button{height:80px; border-radius:40px; padding:10px 60px; font-size:30px; margin:0 15px 30px}
 
+.btn-gold.type-more{width:250px; font-size:16px; color:#000; border-radius:20px; }
+.btn-gold.type-more:focus,
+.btn-gold.type-more:hover{color:#fff;}
+
+.btn-area.line{margin-top:30px;}
+.btn-area.line .btn-gold{z-index:1; position:relative;}
+.btn-area.line::after{content:""; display:block; position:absolute; width:50%; height:2px; background:linear-gradient(-90deg, rgba(248,208,87,0),rgba(248,208,87,1), rgba(248,208,87,0)); left:50%; top:50%; transform: translate(-50%,-50%);}
+
+.teacher-list{width:100%;max-width:1480px;margin:30px auto 0;background:url(../../resources/images/main/swiper-bg.png) no-repeat 50% 0 / 100%; padding:40px 0 0; position: relative;}
 .teacher-swiper{width:100%;max-width:1380px;margin:0 auto;}
 .teacher-item {position:relative; width:285px;height:307px;border-radius:30px;border-bottom-left-radius:0;box-shadow:10px 10px 30px rgba(0,0,0,.3);background: linear-gradient(#fff, #ddd7d0); margin:100px auto 50px}
 .teacher-item .photo{position:absolute; bottom:110px; left:0;}
@@ -40,10 +45,14 @@
 .teacher-item .info dt{font-weight:600; font-size:30px; color:#000; text-align: right; padding:0 0 20px;}
 .teacher-item .btn{display:inline-block; background-color:#292a2e; color:#fff; height:43px; border-radius:22px; padding:10px 28px; font-size:16px;}
 .teacher-item .btn-area{width:100%; position:absolute; bottom:0; left:0; padding:15px 0 30px; text-align:center; }
-.teacher-swiper .swiper-button-prev{width:68px; height:68px; background: url(../../resources/images/common/arrow-swiper.png) no-repeat 0 0; left:0;}
-.teacher-swiper .swiper-button-next{width:68px; height:68px; background: url(../../resources/images/common/arrow-swiper.png) no-repeat 0 0; transform: rotate(180deg); right:0;}
-.teacher-swiper .swiper-button-next::after{display: none;}
-.teacher-swiper .swiper-button-prev::after{display: none;}
+
+.teacher-list .swiper-button-prev{width:68px; height:68px; background: url(../../resources/images/common/arrow-swiper.png) no-repeat 0 0; left:30px;}
+.teacher-list .swiper-button-next{width:68px; height:68px; background: url(../../resources/images/common/arrow-swiper.png) no-repeat 0 0; transform: rotate(180deg); right:30px;}
+.teacher-list .swiper-button-next::after{display: none;}
+.teacher-list .swiper-button-prev::after{display: none;}
+
+
+
 .article-box {max-width:1500px;margin:0 auto}
 .article-box .section-a {margin:0 24px;border-radius:30px;background-color:#2e3036;box-shadow:0 -5px 10px rgba(0,0,0,.3);padding:55px 0 78px;position:relative}
 .article-box .section-a:before {content:'';position:absolute;top:-1px;right:-1px;bottom:-1px;left:-1px;border:1px solid #fff;border-radius:30px}
