--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -7,7 +7,7 @@
 .teacher-group .logo-text {color:#f8d057;}
 .teacher-group .logo-text b {font-weight:500;}
 
-.teacher-menu{position: relative;width:100%;}
+.teacher-menu{position: relative;width:100%; min-height:250px;}
 .teacher-menu .dep-1{position:relative;}
 .teacher-menu .dep-1 li::before{content:""; display:block; position:absolute; left:0; width:calc((100% - 1510px) / 2); border-top:2px solid #fff; opacity:0.3;}
 .teacher-menu .btn-dep-1{position:absolute; left:50%; font-size:24px; font-family: SCD; font-weight: 600; color:#fff; opacity: .3; overflow:hidden; height:85px; margin-left:-750px; transition:all .2s ease-out}
@@ -26,10 +26,11 @@
 .teacher-menu .dep-1 .n2::before{top:127px;}
 .teacher-menu .dep-1 .n3::before{top:212px;}
 
-.teacher-menu .dep-2{width:1000px; margin:0 auto; text-align:center; padding:30px 0 0;}
-.teacher-menu .dep-2 button{height:80px; border-radius:40px; padding:10px 60px; font-size:30px; margin:0 15px 30px}
+.teacher-menu .on .dep-2{display:block;}
+.teacher-menu .dep-2{display:none; width:1070px; margin:0 auto; text-align:center; padding:30px 0 0;}
+.teacher-menu .dep-2 button{height:80px; border-radius:40px; padding:10px 40px; font-size:30px; margin:0 12px 30px}
 
-.btn-gold.type-more{width:250px; font-size:16px; color:#000; border-radius:20px; }
+.btn-gold.type-more{width:250px; font-size:16px; color:#000; border-radius:20px; background: linear-gradient(-69deg,#e2a936, #a27623,, #ffee92 50%, #f5c75f 80%, #e6b352);}
 .btn-gold.type-more:focus,
 .btn-gold.type-more:hover{color:#fff;}
 
