--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -46,6 +46,10 @@
 .teacher-item .btn-area{width:100%; position:absolute; bottom:0; left:0; padding:15px 0 30px; text-align:center; }
 .ico-matching{display:block; width:66px; height:65px; background: url(../../resources/images/common/ico-matching.png) no-repeat 0 0; position:absolute; top:0; right:30px;}
 
+.leader-info{position:relative; width:100%; max-width:1600px; margin:0 auto;}
+.leader-info .photo{position:absolute; right:50px; top:60px;}
+
+
 
 .article-box {max-width:1500px;margin:0 auto}
 .article-box .section-a {margin:0 24px;border-radius:30px;background-color:#2e3036;box-shadow:0 -5px 10px rgba(0,0,0,.3);padding:55px 0 78px;position:relative}
