--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -48,7 +48,7 @@
 
 .leader-info{position:relative; width:100%; max-width:1600px; margin:0 auto;}
 .leader-info .photo{position:absolute; right:50px; top:60px;}
-
+.leader-info .tag span{display:inline-block;height:34px;border-radius:17px;border:1px solid #848484;font-size:16px;color:#848484;line-height:32px;font-weight:400;padding:0 24px;margin-right:10px}
 
 
 .article-box {max-width:1500px;margin:0 auto}
@@ -87,18 +87,18 @@
 .section-b .star-area .box-star .star-data {display:inline-block;height:21px;vertical-align:top;background:url("../../resources/images/common/star-data.png") no-repeat 0 0;}
 .section-b .txt-review {font-size:14px;line-height:20px;color:#2c2d30;font-weight:400;word-break:keep-all}
 .section-b .writer-data {margin-top:16px;border-top:1px solid #bebebe;padding-top:16px;font-size:14px;line-height:20px;color:#2c2d30;font-weight:400}
-.section-b .review-detail {height:0;overflow:hidden;background-color:#e2e2e2;border-radius:20px;position:relative;width:calc(200% + 46px);-webkit-transition:all .2s ease-out;transition:all .2s ease-out}
+.section-b .review-detail {height:0;opacity:0;overflow:hidden;padding:0 80px 0 40px;background-color:#e2e2e2;border-radius:20px;position:relative;width:calc(200% + 46px);-webkit-transition:all .2s ease-out;transition:all .2s ease-out}
 .section-b .review-area:nth-child(even) .review-detail {margin-left:calc(-100% - 46px)}
 .section-b .btn-more {position:absolute;left:50%;bottom:-23px;width:46px;margin-left:-23px;height:46px;border-radius:50%;background-color:#494032}
 .section-b .btn-more:before,
 .section-b .btn-more:after {content:'';display:block;position:absolute;background-color:#fff;left:50%;top:50%}
 .section-b .btn-more:before {width:20px;height:2px;margin:-1px 0 0 -10px}
 .section-b .btn-more:after {width:2px;height:20px;margin:-10px 0 0 -1px}
-.section-b .btn-review-close {position:absolute;top:30px;right:40px;width:26px;height:26px}
+.section-b .btn-review-close {position:absolute;top:30px;right:40px;width:36px;height:36px}
 .section-b .btn-review-close:before,
-.section-b .btn-review-close:after {content:'';display:block;position:absolute;background-color:#999a9b;left:50%;top:50%;width:3px;height:22px;}
+.section-b .btn-review-close:after {content:'';display:block;position:absolute;background-color:#999a9b;left:50%;top:50%;width:3px;height:22px; margin-top:-12px;}
 .section-b .btn-review-close:before {transform:rotate(45deg);-webkit-transform:rotate(45deg)}
 .section-b .btn-review-close:after {transform:rotate(-45deg);-webkit-transform:rotate(-45deg)}
 .section-b .review-area.active .review-item {border-color:#494032}
 .section-b .review-area.active .btn-more {display:none}
-.section-b .review-area.active .review-detail {height:auto;margin-top:30px;padding:36px 80px 36px 40px}
+.section-b .review-area.active .review-detail {height:auto;margin-top:30px;padding:36px 80px 36px 40px;opacity:1;}
