--- a/resources/css/ui.base.css
+++ b/resources/css/ui.base.css
@@ -3,5 +3,6 @@
 /* common */
 @import url(/resources/css/ui.fonts.css);
 @import url(/resources/css/ui.common.css);
+@import url(/resources/css/ui.plugins.css);
 @import url(/resources/css/ui.contents.css);
 @import url(/resources/css/ui.responsive.css);
