--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -46,6 +46,15 @@
 .teacher-item .btn-area{width:100%; position:absolute; bottom:0; left:0; padding:15px 0 30px; text-align:center; }
 .ico-matching{display:block; width:66px; height:65px; background: url(../../resources/images/common/ico-matching.png) no-repeat 0 0; position:absolute; top:0; right:30px;}
 
+.ui-modal.type-premium .ui-modal-wrap{width:100%; height:100%;background:linear-gradient(-90deg, #1e1f22, #2e3036);}
+.ui-modal.type-premium .ui-modal-header{width:100%; max-width:1600px; position:relative; z-index:1; margin:0 auto;}
+.ui-modal.type-premium .ui-modal-header .logo{position:absolute; left:45px; top:45px; z-index: 10;}
+.ui-modal .btn-close{display:inline-block;width:55px;height:55px;border:2px solid #fff;border-radius:50%;transform: rotate(45deg); position:absolute; right:45px; top:45px; z-index: 10;}
+.ui-modal .btn-close:before,
+.ui-modal .btn-close:after {content:'';display:block;position:absolute;background-color:#fff;left:50%;top:50%}
+.ui-modal .btn-close:before {width:20px;height:2px;margin:-1px 0 0 -10px}
+.ui-modal .btn-close:after {width:2px;height:20px;margin:-10px 0 0 -1px}
+
 .leader-info{position:relative; width:100%; max-width:1600px; margin:0 auto;}
 .leader-info .photo{position:absolute; right:50px; top:60px;}
 .leader-info .tag span{display:inline-block;height:34px;border-radius:17px;border:1px solid #848484;font-size:16px;color:#848484;line-height:32px;font-weight:400;padding:0 24px;margin-right:10px}
