--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -93,6 +93,9 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
 /* blt */
 .blt-arrow-a {display:inline-block;width:46px;height:46px;background:url("../../resources/images/blt/blt-arrow-a.png") no-repeat 0 0;background-size:100%}
 
+/* title */
+.title-a {font-size:50px;font-weight:600}
+
 /* button */
 .btn-area{position: relative; width:100%; text-align:center;}
 .btn-gold {display:inline-block; border:2px solid #c7941a; background: linear-gradient(-69deg,#e2a936, #a27623,#ae7f2d ,  #f5c75f 70%, #e6b352); color:#fff; font-family: SCD; font-weight: 600; text-shadow:0 1px 4px rgba(137,100,37,1);box-shadow:10px 0 10px rgba(0,0,0,.6); transition:all .2s ease-out;}
