--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -27,7 +27,7 @@
 
 .btn-gold.type-more{width:250px; font-size:16px; color:#000; border-radius:20px; background: linear-gradient(-69deg,#e2a936, #a27623, #ffee92 50%, #f5c75f 80%, #e6b352);}
 .btn-gold.type-more:focus,
-.btn-gold.type-more:hover{color:#fff;}
+.btn-gold.type-more:hover{color:#fff;background: linear-gradient(-44deg, #633f00,#674100 40%, #a46d00, #925f00);}
 
 .btn-area.line{margin-top:30px;}
 .btn-area.line .btn-gold{z-index:1; position:relative;}
@@ -42,22 +42,40 @@
 .teacher-item .photo{position:absolute; bottom:110px; left:0;}
 .teacher-item .info{position:relative; padding:100px 25px 0; z-index: 1; font-size:16px; color:#000; line-height:1.3;}
 .teacher-item .info dt{font-weight:600; font-size:30px; color:#000; text-align: right; padding:0 0 20px;}
+.teacher-item .info dd{text-align: left; font-size:16px;}
 .teacher-item .btn{display:inline-block; background-color:#292a2e; color:#fff; height:43px; border-radius:22px; padding:10px 28px; font-size:16px;}
 .teacher-item .btn-area{width:100%; position:absolute; bottom:0; left:0; padding:15px 0 30px; text-align:center; }
 .ico-matching{display:block; width:66px; height:65px; background: url(../../resources/images/common/ico-matching.png) no-repeat 0 0; position:absolute; top:0; right:30px;}
 
-.ui-modal.type-premium .ui-modal-wrap{width:100%; height:100%;background:linear-gradient(-90deg, #1e1f22, #2e3036);}
-.ui-modal.type-premium .ui-modal-header{width:100%; max-width:1600px; position:relative; z-index:1; margin:0 auto;}
+
+
+.ui-modal.ready.open.current:after{width:100%; height:100%;background:linear-gradient(-90deg, #1e1f22, #2e3036);}
+.ui-modal.type-premium .ui-modal-wrap{width:100%; height:100%; background: transparent; box-shadow: none;}
+.ui-modal.type-premium .ui-modal-header{width:100%; max-width:1600px; position:relative; z-index:2; margin:0 auto;}
+.ui-modal.type-premium .ui-modal-cont{width:100%; max-width:1600px; position:relative; z-index:1; margin:0 auto; padding:110px 0 100px;}
 .ui-modal.type-premium .ui-modal-header .logo{position:absolute; left:45px; top:45px; z-index: 10;}
-.ui-modal .btn-close{display:inline-block;width:55px;height:55px;border:2px solid #fff;border-radius:50%;transform: rotate(45deg); position:absolute; right:45px; top:45px; z-index: 10;}
+.ui-modal.type-premium .tit h2{width:100%; text-align: center; font-size:60px; font-weight:100; color:#dfdfdf;}
+.ui-modal.type-premium .logo-text {color:#292a2e; background:#f8d057; padding:0 10px;}
+.ui-modal.type-premium .logo-text b {font-weight:500;}
+.ui-modal .btn-close{display:inline-block;width:55px;height:55px;border:2px solid #fff;border-radius:50%;transform: rotate(45deg); position:fixed; right:45px; top:45px; z-index: 10;}
 .ui-modal .btn-close:before,
 .ui-modal .btn-close:after {content:'';display:block;position:absolute;background-color:#fff;left:50%;top:50%}
 .ui-modal .btn-close:before {width:20px;height:2px;margin:-1px 0 0 -10px}
 .ui-modal .btn-close:after {width:2px;height:20px;margin:-10px 0 0 -1px}
 
+.leader-list{position:relative; width:100%; max-width:1378px; font-size:0; text-align: center; margin:0 auto;}
+.leader-list li{display:inline-block; margin:0 22px;}
+
+
 .leader-info{position:relative; width:100%; max-width:1600px; margin:0 auto;}
 .leader-info .photo{position:absolute; right:50px; top:60px;}
-.leader-info .tag span{display:inline-block;height:34px;border-radius:17px;border:1px solid #848484;font-size:16px;color:#848484;line-height:32px;font-weight:400;padding:0 24px;margin-right:10px}
+.leader-info .group{position: relative;  padding:110px 0 0 10px;}
+.leader-info .group h2{font-size:90px;font-weight:100;color:#fff; line-height:1.1;overflow: hidden;}
+.leader-info .group h2 span{opacity:0.3;display:block; width:100%;}
+.leader-info .group em{display:block; margin-top:-5px; float:left; font-size:60px; color:#ffe36f; font-weight:100;border-bottom:4px solid #fff28c; font-family: 'Noto Sans TC', sans-serif; padding-bottom:10px}
+.leader-info .group p{font-size:36px; font-weight:500; color:#fff; line-height: 1.2; margin-top:20px;}
+.leader-info .tag {position:relative; margin-top:40px; width:680px;}
+.leader-info .tag span{display:inline-block;height:60px;border-radius:30px;border:2px solid #848484;font-size:24px;font-weight:600;color:#848484;line-height:58px;padding:0 28px;margin:0 10px 20px 0;}
 
 
 .article-box {max-width:1500px;margin:0 auto}
