--- a/resources/css/ui.fonts.css
+++ b/resources/css/ui.fonts.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap');
 
 @font-face {
     font-family:'SCD';
