--- a/resources/css/ui.plugins.css
+++ b/resources/css/ui.plugins.css
@@ -203,7 +203,8 @@ a.ui-acco-btn:after {content:"keyboard_arrow_right";}
 
 
 /* ui modal : base */
-.scroll-no {overflow:hidden;}
+.scroll-no {overflow:hidden; padding-right:17px;}
+.scroll-no .base-wrap{padding-right:17px;}
 .ui-m .scroll-no{padding-right:0;}
 .ui-modal.n1 {z-index:201;}
 .ui-modal.n2 {z-index:202;}
