--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -48,7 +48,6 @@
 .ico-matching{display:block; width:66px; height:65px; background: url(../../resources/images/common/ico-matching.png) no-repeat 0 0; position:absolute; top:0; right:30px;}
 
 
-
 .ui-modal.ready.open.current:after{width:100%; height:100%;background:linear-gradient(-90deg, #1e1f22, #2e3036);}
 .ui-modal.type-premium .ui-modal-wrap{width:100%; height:100%; background: transparent; box-shadow: none;}
 .ui-modal.type-premium .ui-modal-header{width:100%; max-width:1600px; position:relative; z-index:2; margin:0 auto;}
@@ -57,7 +56,7 @@
 .ui-modal.type-premium .tit h2{width:100%; text-align: center; font-size:60px; font-weight:100; color:#dfdfdf;}
 .ui-modal.type-premium .logo-text {color:#292a2e; background:#f8d057; padding:0 10px;}
 .ui-modal.type-premium .logo-text b {font-weight:500;}
-.ui-modal .btn-close{display:inline-block;width:55px;height:55px;border:2px solid #fff;border-radius:50%;transform: rotate(45deg); position:fixed; right:45px; top:45px; z-index: 10;}
+.ui-modal .btn-close{display:inline-block;width:55px;height:55px;border:2px solid #fff;border-radius:50%;transform: rotate(45deg); position:fixed; left:50%; margin-left:705px; top:45px; z-index: 10;}
 .ui-modal .btn-close:before,
 .ui-modal .btn-close:after {content:'';display:block;position:absolute;background-color:#fff;left:50%;top:50%}
 .ui-modal .btn-close:before {width:20px;height:2px;margin:-1px 0 0 -10px}
@@ -77,6 +76,16 @@
 .leader-info .tag {position:relative; margin-top:40px; width:680px;}
 .leader-info .tag span{display:inline-block;height:60px;border-radius:30px;border:2px solid #848484;font-size:24px;font-weight:600;color:#848484;line-height:58px;padding:0 28px;margin:0 10px 20px 0;}
 
+.leader-info .chara{position:relative; margin:80px 0 80px; width:100%; max-width:1500px; overflow:hidden; display:flex; justify-content:space-between}
+.leader-info .chara .line{display:block; flex:1; width:100%; height:6px; background: url(../../resources/images/common/line-dot.png) repeat-x 0 0;margin:75px 30px 0;}
+.leader-info .chara-item{flex:0; text-align: center; width:170px; position: relative; z-index: 1;}
+.leader-info .chara-item .ico{display:inline-block; width:150px; height:150px; background:url(../../resources/images/common/ico-char.png) no-repeat 0 0;}
+.leader-info .chara-item .txt{display:block; width:100%; font-size:21px; color:#fff; word-break: keep-all;}
+
+.leader-info .btn-gold{position:relative; height:100px; border-radius:50px; padding:20px 85px; font-size:38px; margin:0; font-weight:500; font-family:'Noto Sans KR'; background: linear-gradient(-69deg,#e2a936, #a27623, #dda93e 70%, #ebbc4c 80%, #fdeaa6);}
+.leader-info .btn-gold::before{content:""; display:block; width:250px; height:250px; background: url(../../resources/images/common/light.png) no-repeat 0 0; position:absolute; top:-90px;left:-112px; }
+.leader-info .btn-gold:focus,
+.leader-info .btn-gold:hover{color:#fff;background: linear-gradient(-44deg, #633f00,#674100 40%, #a46d00, #925f00);}
 
 .article-box {max-width:1500px;margin:0 auto}
 .article-box .section-a {margin:0 24px;border-radius:30px;background-color:#2e3036;box-shadow:0 -5px 10px rgba(0,0,0,.3);padding:55px 0 78px;position:relative}
