--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -67,12 +67,22 @@ body {background:#eee url('../../resources/images/common/top_bg.png') no-repeat 
 /* base header */
 .base-header {width:100%;max-width:1640px;margin:0 auto;padding:55px 20px 20px;}
 .base-header::after{content:""; display:block; clear:both;}
+.header-area{position:relative}
 .logo-tera {display:block;float:left;}
 .util-menu {float:right;}
 .util-menu > a {display:inline-block;width:55px;height:55px;border:2px solid #fff;border-radius:50%;background:url(../../resources/images/common/ico-header.png) no-repeat -2px -2px ;}
 .util-menu .util-n2 {background-position:-57px -2px;}
 .util-menu > a + a {margin-left:10px;}
 
+.goldkey{position: absolute; top:40px; left:-15px; z-index: 100;}
+.goldkey .key-line{display:block; position: absolute; top:0; left:27px;}
+.goldkey .key{display:block; position: absolute; top:110px; left:10px; width:39px; height:67px; transform-origin:50%; transform:rotateY(0deg); transition: transform .3s ease-out; background: url(../../resources/images/common/key2.png) no-repeat 0 0;}
+.goldkey .key:hover{transform:rotateY(360deg);}
+/* .goldkey .key:hover{animation-name:fadeInTop; animation-duration:.8s; animation-iteration-count:1; animation-timing-function:ease-out; animation-fill-mode: forwards;}
+@keyframes keyani {
+    0% {transform:perspective(10px) rorateY(0deg);}
+    100% {transform:perspective(10px) rorateY(45deg);}
+} */
 /* footer */
 .footer-area {max-width:1304px;margin:0 auto;padding-top:290px}
 .footer-content {position:relative;padding-left:246px}
