--- a/resources/css/ui.plugins.css
+++ b/resources/css/ui.plugins.css
@@ -204,6 +204,7 @@ a.ui-acco-btn:after {content:"keyboard_arrow_right";}
 
 /* ui modal : base */
 .scroll-no {overflow:hidden; padding-right:17px;}
+.scroll-no .base-header{margin-left:-17px;}
 .scroll-no .base-wrap{padding-right:17px;}
 .ui-m .scroll-no{padding-right:0;}
 .ui-modal.n1 {z-index:201;}
